--- a/contact-center/app/src/main/resources/application.properties
+++ b/contact-center/app/src/main/resources/application.properties
@@ -180,3 +180,4 @@ extras.login.banner=off
 extras.login.chatbox=off
 extras.auth.super-admin.pass=
 extras.log.request=off
+spring.profiles.active=dev,unit-test
