--- a/contact-center/root/pom.xml
+++ b/contact-center/root/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.cskefu.cc</groupId>
     <artifactId>cc-root</artifactId>
@@ -12,7 +12,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.1.0</version>
-        <relativePath />
+        <relativePath/>
     </parent>
     <licenses>
         <license>
@@ -406,12 +406,12 @@
             <artifactId>sdk</artifactId>
             <version>3.5.1</version>
         </dependency>
-        
+
         <dependency>
             <groupId>com.chatopera.store</groupId>
             <artifactId>store-sdk</artifactId>
             <version>1.1-SNAPSHOT</version>
-          </dependency>
+        </dependency>
 
         <!-- Required for Java 11 https://github.com/cskefu/cskefu/issues/714 -->
         <dependency>
@@ -447,6 +447,11 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
         </dependency>
     </dependencies>
     <repositories>
