--- a/contact-center/app/src/main/resources/application.properties
+++ b/contact-center/app/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #
-# Copyright (C) 2017 优客服-多渠道客服系统
+# Copyright (C) 2017 \u4F18\u5BA2\u670D-\u591A\u6E20\u9053\u5BA2\u670D\u7CFB\u7EDF
 # Modifications copyright (C) 2018-2022 Chatopera Inc, <https://www.chatopera.com>
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -48,7 +48,7 @@ server.tomcat.max-swallow-size=1000000000
 server.tomcat.max-threads=400
 
 ##############################################
-# 日志及临时文件存储
+# \u65E5\u5FD7\u53CA\u4E34\u65F6\u6587\u4EF6\u5B58\u50A8
 ##############################################
 server.log.path=../logs
 server.log.level=INFO
@@ -83,7 +83,7 @@ spring.jpa.properties.hibernate.allow_update_outside_transaction=true
 # Cache
 ##############################################
 ## Available create_by_force, skip
-cache.setup.strategy=create_by_force
+cache.setup.strategy=skip
 
 ##############################################
 # Redis Connection
