--- a/contact-center/app/src/main/resources/application-dev.properties
+++ b/contact-center/app/src/main/resources/application-dev.properties
@@ -3,9 +3,9 @@ spring.datasource.url=jdbc:mysql://test.mysql.dengchao.fun/cskefu-e2e-test?useUn
 spring.datasource.username=dengchao
 spring.datasource.password=159357asD
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-# Redis服务器连接端口
+# Redis\u670D\u52A1\u5668\u8FDE\u63A5\u7AEF\u53E3
 spring.data.redis.host=test.redis.dengchao.fun
-# Redis服务器连接密码（默认为空）
+# Redis\u670D\u52A1\u5668\u8FDE\u63A5\u5BC6\u7801\uFF08\u9ED8\u8BA4\u4E3A\u7A7A\uFF09
 spring.data.redis.password=testonly:Testonly!
 # ActiveMQ
 spring.activemq.broker-url=tcp://rabbitmq-cn-m1e411lfh05.cn-shenzhen.amqp-16.net.mq.amqp.aliyuncs.com
