--- a/contact-center/app/pom.xml
+++ b/contact-center/app/pom.xml
@@ -6,6 +6,7 @@
     <artifactId>contact-center</artifactId>
     <packaging>war</packaging>
     <name>cc-core</name>
+    <version>2024.1204.0</version>
     <description>春松客服：开源客服系统</description>
     <licenses>
         <license>
