chore: disable flyway placeholder replacement

--- a/contact-center/app/src/main/resources/application.properties
+++ b/contact-center/app/src/main/resources/application.properties
@@ -181,3 +181,4 @@ extras.login.chatbox=off
 extras.auth.super-admin.pass=
 extras.log.request=off
 spring.profiles.active=dev,unit-test
+spring.flyway.placeholder-replacement=false
