chore: specify logging position

--- a/contact-center/app/src/main/resources/application.properties
+++ b/contact-center/app/src/main/resources/application.properties
@@ -182,3 +182,4 @@ extras.auth.super-admin.pass=
 extras.log.request=off
 spring.profiles.active=dev,unit-test
 spring.flyway.placeholder-replacement=false
+logging.file.path=./log
