--- a/contact-center/app/src/main/resources/application-dev.properties
+++ b/contact-center/app/src/main/resources/application-dev.properties
@@ -14,3 +14,4 @@ spring.activemq.password=QzUxRTlBRTM3RkI3Mzc5NzVFMTJERURGQTNGRDdEMUQwQ0UxNzM4MTo
 spring.activemq.pool.enabled=true
 spring.activemq.pool.max-connections=50
 logging.file.path=./contact-center/logs
+cskeku.activemq.destination.prefix=debug-
