--- a/contact-center/app/src/test/resources/application-unit-test.properties
+++ b/contact-center/app/src/test/resources/application-unit-test.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:mysql://shenzhen-e-biz.mysql.rds.aliyuncs.com/cskefu-
 spring.data.redis.host=shenzhen-de-biz.redis.rds.aliyuncs.com
 # ActiveMQ
 spring.activemq.broker-url=tcp://rabbitmq-cn-m1e411lfh05.cn-shenzhen.amqp-16.vpc.mq.amqp.aliyuncs.com
+cskeku.activemq.destination.prefix=test-
