refactor: replace activemq connection

--- a/contact-center/app/src/test/resources/application-unit-test.properties
+++ b/contact-center/app/src/test/resources/application-unit-test.properties
@@ -3,5 +3,5 @@ spring.datasource.url=jdbc:mysql://shenzhen-e-biz.mysql.rds.aliyuncs.com/cskefu-
 # Redis服务器连接端口
 spring.data.redis.host=shenzhen-de-biz.redis.rds.aliyuncs.com
 # ActiveMQ
-spring.activemq.broker-url=tcp://rabbitmq-cn-m1e411lfh05.cn-shenzhen.amqp-16.vpc.mq.amqp.aliyuncs.com
+spring.activemq.broker-url=tcp://activemq.xgtl.online:61616
 cskeku.activemq.destination.prefix=test-
